--- a/doc/restapi/README.mustache
+++ b/doc/restapi/README.mustache
@@ -1,72 +1,91 @@
-{{{appDescription}}}
+# {{{appDescription}}}
+
 {{#version}}*Version:* {{{.}}}{{/version}}
+
 ----
 
-h2. Endpoints
+## Endpoints
+
 {{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}
-h3. {{nickname}}
+
+### {{nickname}}
 
 {{#summary}}*Summary:* {{.}}{{/summary}}
 *Description:* {{notes}}{{^notes}}*No Description*{{/notes}}
 
-|| HttpMethod | {{httpMethod}}|
-|| Protocol | {{scheme}}|
-|| Path | {{path}}|
-|| Base Path | {{basePath}} |
-{{#hasProduces}}|| Produces | {{#produces}}{{mediaType}}{{/produces}}|{{/hasProduces}}
+| **HttpMethod** | {{httpMethod}} |
+| **Protocol** | {{scheme}} |
+| **Path** | {{path}} |
+| **Base Path** | {{basePath}} |
+{{#hasProduces}}| **Produces** | {{#produces}}{{mediaType}}{{/produces}} | {{/hasProduces}}
 
+#### Parameters
 
-h4. Parameters
+{{#hasPathParams}}
 
-    {{#hasPathParams}}
-h5. Path Parameters
-        ||Name||Description||Type||Required||Default||Pattern||Enum||
-        {{#pathParams}}{{>param}}{{/pathParams}}
-    {{/hasPathParams}}
+##### Path Parameters
 
-    {{#hasBodyParam}}
-h5. Body Parameter
-        ||Name||Description||Type||Required||Default||Pattern||Enum||
-        {{#bodyParams}}{{>param}}{{/bodyParams}}
-    {{/hasBodyParam}}
+| Name | Description | Type | Required | Default | Pattern | Enum |
+| --- | --- | --- | --- | --- | --- | --- |
+{{#pathParams}}{{>param}}{{/pathParams}}
+{{/hasPathParams}}
 
-    {{#hasHeaderParams}}
-h5. Header Parameters
-        ||Name||Description||Type||Required||Default||Pattern||Enum||
-        {{#headerParams}}{{>param}}{{/headerParams}}
-    {{/hasHeaderParams}}
+{{#hasBodyParam}}
 
-    {{#hasQueryParams}}
-h5. Query Parameters
-        ||Name||Description||Type||Required||Default||Pattern||Enum||
-        {{#queryParams}}{{>param}}{{/queryParams}}
-    {{/hasQueryParams}}
+##### Body Parameter
 
-h4. Responses
-    ||Status Code||Message||Return Type||
-    {{#responses}}
-        |{{code}}|{{message}}|{{{dataType}}}&nbsp;|
-    {{/responses}}
+| Name | Description | Type | Required | Default | Pattern | Enum |
+| --- | --- | --- | --- | --- | --- | --- |
+{{#bodyParams}}{{>param}}{{/bodyParams}}
+{{/hasBodyParam}}
+
+{{#hasHeaderParams}}
+
+##### Header Parameters
+
+| Name | Description | Type | Required | Default | Pattern | Enum |
+| --- | --- | --- | --- | --- | --- | --- |
+{{#headerParams}}{{>param}}{{/headerParams}}
+{{/hasHeaderParams}}
+
+{{#hasQueryParams}}
+
+##### Query Parameters
+
+| Name | Description | Type | Required | Default | Pattern | Enum |
+| --- | --- | --- | --- | --- | --- | --- |
+{{#queryParams}}{{>param}}{{/queryParams}}
+{{/hasQueryParams}}
+
+#### Responses
+
+| Status Code | Message | Return Type|
+| --- | --- | --- |
+{{#responses}}
+| {{code}} | {{message}} | {{{dataType}}}&nbsp; |
+{{/responses}}
 
 {{/operation}}
 {{/operations}}
 {{/apis}}
 {{/apiInfo}}
 
-h2. Models
+## Models
 
 {{#models}}
 {{#model}}
 
-h3. {{classname}}
+### {{classname}}
+
 {{{description}}}
-{{#isEnum}} ||Name||Value||Description||
-{{#allowableValues}} {{#enumVars}} |{{{name}}} |{{{value}}} |{{{enumDescription}}} |
+{{#isEnum}}| Name | Value | Description |
+| --- | --- | --- |
+{{#allowableValues}} {{#enumVars}} | {{{name}}} | {{{value}}} | {{{enumDescription}}} |
 {{/enumVars}}
 {{/allowableValues}} {{/isEnum}}
-{{^isEnum}}||Field Name||Required||Type||Description||Enum||
-{{#vars}} |{{baseName}} |{{#required}}(/){{/required}}{{^required}}(x){{/required}} |{{{dataType}}}|{{description}} | {{#isEnum}} {{_enum}} {{/isEnum}} |
+{{^isEnum}}| Field Name | Required | Type | Description | Enum |
+| --- | --- | --- | --- | --- |
+{{#vars}} | {{baseName}} | {{#required}}(/){{/required}}{{^required}}(x){{/required}} | {{{dataType}}} | {{description}} | {{#isEnum}} {{_enum}} {{/isEnum}} |
 {{/vars}} {{/isEnum}}
 {{/model}}
 {{/models}}
-
