--- a/doc/restapi/README.mustache
+++ b/doc/restapi/README.mustache
@@ -1,9 +1,10 @@
 # {{{appName}}}
 
-{{{appDescription}}}  
+{{unescapedAppDescription}}  
 
 ## Info 
 
+{{#info}}{{x-audience}}{{/info}}
 {{#infoUrl}}*More information:* {{{infoUrl}}} {{/infoUrl}}  
 {{#infoEmail}}*Contact Info:* {{{infoName}}} <{{{infoEmail}}}> {{/infoEmail}}
 {{#version}}*Version:* {{{.}}}{{/version}}  
@@ -40,7 +41,7 @@
 > {{#returnType}}{{returnType}} {{/returnType}}{{operationId}}({{#allParams}}{{{paramName}}}{{^-last}}, {{/-last}}{{/allParams}})
 
 {{#summary}}*Summary:* {{.}}{{/summary}}   
-*Description:* {{notes}}{{^notes}}*No Description*{{/notes}}   
+*Description:* {{unescapedNotes}}{{^notes}}*No Description*{{/notes}}   
 
 **HttpMethod:** {{httpMethod}}  
 **Protocol:** {{scheme}}  
