--- a/doc/restapi/README.mustache
+++ b/doc/restapi/README.mustache
@@ -104,10 +104,10 @@ AuthMethodame = "{{name}}" Scopes = { {{#scopes}}"{{scope}}"{{^-last}}, {{/-last
 
 #### Responses
 
-| Status Code | Message | Return Type | Example |
-| --- | --- | --- | --- |
+| Status Code | Message | Return Type |
+| --- | --- | --- |
 {{#responses}}
-| {{code}} | {{message}} | {{#isPrimitiveType}}{{dataType}}{{/isPrimitiveType}}{{^isPrimitiveType}}{{#isFile}}{{dataType}}{{/isFile}}{{^isFile}}{{#generateModelDocs}}[{{dataType}}](#{{baseType}}){{/generateModelDocs}}{{^generateModelDocs}}{{dataType}}{{/generateModelDocs}}{{/isFile}}{{/isPrimitiveType}} | {{#examples}} {{{contentType}}} {{example}} {{/examples}} |
+| {{code}} | {{message}} | {{#isPrimitiveType}}{{dataType}}{{/isPrimitiveType}}{{^isPrimitiveType}}{{#isFile}}{{dataType}}{{/isFile}}{{^isFile}}{{#generateModelDocs}}[{{dataType}}](#{{baseType}}){{/generateModelDocs}}{{^generateModelDocs}}{{dataType}}{{/generateModelDocs}}{{/isFile}}{{/isPrimitiveType}} |
 {{/responses}}
 
 #### Example
